--- a/app/views/liquid_files/viewer.html.erb
+++ b/app/views/liquid_files/viewer.html.erb
@@ -5,7 +5,31 @@
 <%= form_tag liquid_viewer_path, method: 'get' do %>
   <fieldset style='width: 400px'>
     <%= label_tag :file_name %>
-    <%= select_tag :file_name, options_for_select([['First Win', 'first_win_email'], ['Welcome Message', 'welcome_email'], ['Long Reminder Email', 'long_reminder_email'], ['Quick Reminder Email', 'quick_reminder'], ['Personality Report', 'personality_report'], ['Habit Course Intro', 'habit-course/intro'], ['Habit Course Lesson 1', 'habit-course/Lesson-1'], ['Habit Course Lesson 2', 'habit-course/Lesson-2'], ['Habit Course Lesson 3', 'habit-course/Lesson-3'], ['Habit Course Lesson 4', 'habit-course/Lesson-4'], ['Habit Course Lesson 5', 'habit-course/Lesson-5'], ['Habit Course Lesson 6', 'habit-course/Lesson-6'], ['Generic Reminder Email', 'generic_reminder_email']], @file_name) %>
+    <%= select_tag :file_name, options_for_select(
+      [
+        ['First Win', 'first_win_email'],
+        ['No Win', 'no_win'],
+        ['Welcome Message', 'welcome_email'],
+        ['Long Reminder Email', 'long_reminder_email'],
+        ['Quick Reminder Email', 'quick_reminder'],
+        ['Personality Report', 'personality_report'],
+        ['Habit Course Intro', 'habit-course/intro'],
+        ['Habit Course Lesson 1', 'habit-course/Lesson-1'],
+        ['Habit Course Lesson 2', 'habit-course/Lesson-2'],
+        ['Habit Course Lesson 3', 'habit-course/Lesson-3'],
+        ['Habit Course Lesson 4', 'habit-course/Lesson-4'],
+        ['Habit Course Lesson 5', 'habit-course/Lesson-5'],
+        ['Habit Course Lesson 6', 'habit-course/Lesson-6'],
+        ['Reminder Email (3 Days)', 'reminder_email_3d'],
+        [' Reminder Email (7 Days)', 'reminder_email_7d'],
+        [' Reminder Email (7 Days - Infinite)', 'reminder_email_7d'],
+        [' Reminder Email (14 Days)', 'reminder_email_14d'],
+        [' Reminder Email (30 Days)', 'reminder_email_30d'],
+        [' Reminder Email (60 Days)', 'reminder_email_60d'],
+        [' Reminder Email (90 Days)', 'reminder_email_90d']
+      ],
+      @file_name)
+    %>
     <br>
     <%= label_tag :first_name %>
     <%= text_field_tag :first_name, params[:first_name], placeholder: 'First Name' %>
